# surf-forecast

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
designs/: README.md  surf-forecast-mockups.pen
mobile/: App.tsx  jest.config.js  package-lock.json  package.json
mobile/__tests__/: formatting.test.ts
mobile/src/api/: client.ts  endpoints.ts  schemas.ts  types.ts
mobile/src/auth/: AuthContext.tsx  tokenStorage.ts
mobile/src/components/: BestWindowCard.tsx  ComponentBreakdown.tsx  ErrorState.tsx  FeedbackCTA.tsx  HourlyMiniChart.tsx  LoadingSpinner.tsx  RatingBadge.tsx  ScoreBadge.tsx  SpotCard.tsx  SwellInfo.tsx  TideChart.tsx  WindIndicator.tsx  index.ts
mobile/src/hooks/: useAuth.ts  useForecast.ts
mobile/src/navigation/: AuthStack.tsx  HomeStack.tsx  MainTabs.tsx  types.ts
mobile/src/screens/: AlertsScreen.tsx  CompareScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx  SpotDetailScreen.tsx
mobile/src/theme/: colors.ts  spacing.ts  typography.ts
mobile/src/utils/: constants.ts  formatting.ts
scripts/: collect_data.py
src/: config.py
src/api/: auth.py  main.py
src/api/routes/: alerts.py  feedback.py  forecast.py  spots.py
src/collectors/: cmems.py  emodnet.py  open_meteo.py  stormglass.py  tides.py
src/engine/: calibration.py  scoring.py  spectral.py  spot_profile.py  tide_bathy.py  wind_model.py
src/models/: database.py  orm.py  schemas.py
src/notifications/: email.py  telegram.py
src/scheduler/: jobs.py
tests/: test_auth.py
