[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-forecast"
version = "0.1.0"
description = "Smart surf forecast for Porto coast — scores wave quality per spot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "apscheduler>=3.10",
    "python-telegram-bot>=20.7",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "aiosmtplib>=3.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
cmems = [
    "xarray>=2023.12",
    "netcdf4>=1.6",
    "copernicusmarine>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx",  # for TestClient
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
